src/main/java/com/example/final_project/_core/errors/exception/Exception400.java
package com.example.final_project._core.errors.exception;

public class Exception400 extends RuntimeException {
    public Exception400(String msg){
        super(msg);
    }
}